deployment-wordpress2.yml
kind: Service
apiVersion: v1
metadata:
  name: wordpress-service2
  namespace: default
spec:
  ports:
  - port: 80
    protocol: TCP
  #type: LoadBalancer
  selector:
    app: wordpress-app2

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress-deployment2
  namespace: default
  labels:
    app: wordpress-app2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wordpress-app2
      track: stable
  template:
    metadata:
      labels:
        app: wordpress-app2
        track: stable
    spec:
      containers:
      - name: wordpress-app2
        image: irpank/wordpress-bp:tag
        ports:
        - containerPort: 80
---

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: wordpress-ingress2
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: blog-st.komarudins.online
    http:
      paths:
      #- path: /
      - backend:
          serviceName: wordpress-service2
          servicePort: 80
